--- a/.codeflow.yml
+++ b/.codeflow.yml
@@ -1,7 +1,7 @@
 ---
 secure:
   required_reviews: 1
-  requires_mfa: true
+  requires_mfa: tru
   requires_verified: true
   upstream_repository: base-org/web
 
